# fruity_quantum_flyway_brain_simulator

./: .env.example  .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  RUN_ME_FIRST.md  pyproject.toml  requirements.txt
agent_tickets/: fruit_fly_surface_wave_project_compendium.md  milestone_10_follow_on_tickets.md  milestone_10_surface_wave_engine_tickets.md  milestone_11_follow_on_tickets.md  milestone_11_hybrid_morphology_classes_tickets.md  milestone_12_readouts_task_layer_tickets.md  milestone_13_validation_ladder_tickets.md  milestone_14_follow_on_tickets.md  milestone_14_ui_analysis_dashboard_tickets.md  milestone_15_experiment_orchestration_ablations_tickets.md  milestone_15_follow_on_tickets.md  milestone_16_demo_narrative_showcase_mode_tickets.md  milestone_17_follow_on_tickets.md  milestone_17_whole_brain_context_views_tickets.md  milestone_5_geometry_pipeline_tickets.md  milestone_6_surface_discretization_tickets.md  milestone_7_synapse_coupling_tickets.md  milestone_8a_canonical_stimulus_library_tickets.md  milestone_8b_retinal_ommatidial_sampler_tickets.md  milestone_9_baseline_non_wave_simulator_tickets.md  repo_review_tickets.md
config/: milestone_10_verification.yaml  milestone_11_verification.yaml  milestone_12_verification.yaml  milestone_13_verification.yaml  milestone_14_verification.yaml  milestone_15_verification.yaml  milestone_17_verification.yaml  milestone_1_design_lock.yaml  milestone_6_verification.yaml  milestone_6_verification_root_ids.txt  milestone_7_verification.yaml  milestone_7_verification_edges.txt  visual_subset.example.yaml  (+5 more)
(+854 files in other folders)
